@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="103"
+VERSION_BUILD="104"
 
 # $Log$
+#
+# BUILD : 1.4.0.104 (SVN)
+# BUGS  : N/A
+# NOTES : Fixed SQL structure error of ison table
 #
 # BUILD : 1.4.0.103 (SVN)
 # BUGS  : 421
