@@ -30,6 +30,7 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+09/12 F Fixed SQL structure error of ison table                   [ #00]
 09/04 F Fixed SVSKILL not being handled                           [#421]
 08/30 F Fixed SQL column for server uptime limiting to 97 days    [#428]
 08/30 F Applied Trystan's signals patch                           [#429]
